2003-03-05  Vladimir Makarov  <vmakarov@redhat.com>

	* haifa-sched.c (schedule_block): Don't call reorder when sorting
	is prohibited.

2003-03-03  Vladimir Makarov  <vmakarov@redhat.com>

        Backport of the dfa scheduler and itanium insn bundling:

        * Makefile.in: Adding entries genautomata. Modifying entries for
        sched-rgn.o, sched-vis.o, sched-ebb.o, genattrtab.o.

        * genattr.c (main): Modify it.

        * genattrtab.c: (attr_printf, check_attr_test,
        write_function_unit_info, make_internal_attr, make_numeric_value,
        main): Modify them.

        * haifa-sched.c (NEXT_Q, NEXT_Q_AFTER, insn_cost,
        rank_for_schedule, schedule_insn, queue_to_ready,
        debug_ready_list, move_insn, schedule_block, set_priorities,
        sched_init, sched_finish): Modify them.
        (MAX_INSN_QUEUE_INDEX, max_insn_queue_index_macro_value,
        curr_state, dfa_state_size, ready_try, ready_element,
        ready_remove, advance_one_cycle, find_set_reg_weight, max_issue,
        choose_ready, insert_schedule_bubbles_p): New functions, macros,
        global variables.
        (DONE_PRIORITY, MAX_PRIORITY, TAIL_PRIORITY, LAUNCH_PRIORITY,
        DONE_PRIORITY_P, LOW_PRIORITY_P): Remove them.

        * rtl.def (DEFINE_CPU_UNIT, DEFINE_QUERY_CPU_UNIT, EXCLUSION_SET,
        PRESENCE_SET, FINAL_PRESENCE_SET, ABSENCE_SET, FINAL_ABSENCE_SET,
        DEFINE_BYPASS, DEFINE_AUTOMATON, AUTOMATA_OPTION,
        DEFINE_RESERVATION, DEFINE_INSN_RESERVATION): New declarations.

        * rtl.h (LINK_COST_ZERO, LINK_COST_FREE): Remove them.

        * sched-deps.c (add_dependence, add_dependence, set_sched_group_p,
        sched_analyze_insn, sched_analyze, compute_forward_dependences,
        free_deps): Modify them.
        (remove_dependence, group_leader): Remove them.

        * sched-ebb.c (init_ready_list, schedule_ebb): Modify them.

        * sched-int.h (curr_state, print_insn): New definitions.
