@@ -1,3 +1,7 @@
+2003-03-09  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20030309-1.c: New test.
+
 2003-02-25  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20030225-1.c: New test.
